src/test/ui/cfg-rustdoc.rs
#[cfg(rustdoc)]
pub struct Foo;

fn main() {
    let f = Foo; //~ ERROR
}
